v0.4.1/_sources/tutorials/index.rst.txt
:orphan:



.. _sphx_glr_tutorials:

Tutorials
=========



.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="To plot an inset figure inside another larger figure, we can use the pygmt.Figure.inset method....">

.. only:: html

 .. figure:: /tutorials/images/thumb/sphx_glr_insets_thumb.png
     :alt: Adding an inset to the figure

     :ref:`sphx_glr_tutorials_insets.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/insets

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Plotting coastlines and borders is handled by pygmt.Figure.coast.">

.. only:: html

 .. figure:: /tutorials/images/thumb/sphx_glr_coastlines_thumb.png
     :alt: Coastlines and borders

     :ref:`sphx_glr_tutorials_coastlines.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/coastlines

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Default GMT parameters can be set globally or locally using pygmt.config.">

.. only:: html

 .. figure:: /tutorials/images/thumb/sphx_glr_configuration_thumb.png
     :alt: Configuring PyGMT defaults

     :ref:`sphx_glr_tutorials_configuration.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/configuration

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create 3-D perspective image or surface mesh from a grid using pygmt.Figure.grdview.">

.. only:: html

 .. figure:: /tutorials/images/thumb/sphx_glr_3d_perspective_image_thumb.png
     :alt: Creating a 3D perspective image

     :ref:`sphx_glr_tutorials_3d_perspective_image.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/3d_perspective_image

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Plotting a contour map is handled by pygmt.Figure.grdcontour.">

.. only:: html

 .. figure:: /tutorials/images/thumb/sphx_glr_contour_map_thumb.png
     :alt: Creating a map with contour lines

     :ref:`sphx_glr_tutorials_contour_map.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/contour_map

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Setting the style of the map frames, ticks, etc, is handled by the frame parameter that all plo...">

.. only:: html

 .. figure:: /tutorials/images/thumb/sphx_glr_frames_thumb.png
     :alt: Frames, ticks, titles, and labels

     :ref:`sphx_glr_tutorials_frames.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/frames

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="When you&#x27;re preparing a figure for a paper, there will often be times when you&#x27;ll need to put m...">

.. only:: html

 .. figure:: /tutorials/images/thumb/sphx_glr_subplots_thumb.png
     :alt: Making subplots

     :ref:`sphx_glr_tutorials_subplots.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/subplots

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Welcome to PyGMT! Here we&#x27;ll cover some of basic concepts, like creating simple figures and nam...">

.. only:: html

 .. figure:: /tutorials/images/thumb/sphx_glr_first_figure_thumb.png
     :alt: Making your first figure

     :ref:`sphx_glr_tutorials_first_figure.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/first_figure

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Plotting a map of Earth relief can use the data accessed by the pygmt.datasets.load_earth_relie...">

.. only:: html

 .. figure:: /tutorials/images/thumb/sphx_glr_earth_relief_thumb.png
     :alt: Plotting Earth relief

     :ref:`sphx_glr_tutorials_earth_relief.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/earth_relief

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="GMT shines when it comes to plotting data on a map. We can use some sample data that is package...">

.. only:: html

 .. figure:: /tutorials/images/thumb/sphx_glr_plot_thumb.png
     :alt: Plotting data points

     :ref:`sphx_glr_tutorials_plot.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/plot

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="PyGMT accepts a variety of datetime objects to plot data and create charts. Aside from the buil...">

.. only:: html

 .. figure:: /tutorials/images/thumb/sphx_glr_date_time_charts_thumb.png
     :alt: Plotting datetime charts

     :ref:`sphx_glr_tutorials_date_time_charts.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/date_time_charts

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Plotting lines is handled by pygmt.Figure.plot.">

.. only:: html

 .. figure:: /tutorials/images/thumb/sphx_glr_lines_thumb.png
     :alt: Plotting lines

     :ref:`sphx_glr_tutorials_lines.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/lines

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="It is often useful to add annotations to a map plot. This is handled by pygmt.Figure.text.">

.. only:: html

 .. figure:: /tutorials/images/thumb/sphx_glr_text_thumb.png
     :alt: Plotting text

     :ref:`sphx_glr_tutorials_text.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/text

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Plotting vectors is handled by pygmt.Figure.plot.">

.. only:: html

 .. figure:: /tutorials/images/thumb/sphx_glr_vectors_thumb.png
     :alt: Plotting vectors

     :ref:`sphx_glr_tutorials_vectors.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/vectors

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Many of the plotting functions take the region parameter, which sets the area that will be show...">

.. only:: html

 .. figure:: /tutorials/images/thumb/sphx_glr_regions_thumb.png
     :alt: Setting the region

     :ref:`sphx_glr_tutorials_regions.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/regions
.. raw:: html

    <div class="sphx-glr-clear"></div>



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
