v0.6.0/_sources/tutorials/index.rst.txt
:orphan:



.. _sphx_glr_tutorials:

.. _tutorials:

Tutorials
=========

These examples teach us how to complete various tasks using PyGMT!


.. raw:: html

    <div class="sphx-glr-clear"></div>



.. _sphx_glr_tutorials_basics:

Basics
------



.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Plotting coastlines and borders is handled by pygmt.Figure.coast.">

.. only:: html

 .. figure:: /tutorials/basics/images/thumb/sphx_glr_coastlines_thumb.png
     :alt: Coastlines and borders

     :ref:`sphx_glr_tutorials_basics_coastlines.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/basics/coastlines

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Setting the style of the map frames, ticks, etc, is handled by the frame parameter that all plo...">

.. only:: html

 .. figure:: /tutorials/basics/images/thumb/sphx_glr_frames_thumb.png
     :alt: Frames, ticks, titles, and labels

     :ref:`sphx_glr_tutorials_basics_frames.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/basics/frames

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="GMT shines when it comes to plotting data on a map. We can use some sample data that is package...">

.. only:: html

 .. figure:: /tutorials/basics/images/thumb/sphx_glr_plot_thumb.png
     :alt: Plotting data points

     :ref:`sphx_glr_tutorials_basics_plot.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/basics/plot

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Plotting lines is handled by pygmt.Figure.plot.">

.. only:: html

 .. figure:: /tutorials/basics/images/thumb/sphx_glr_lines_thumb.png
     :alt: Plotting lines

     :ref:`sphx_glr_tutorials_basics_lines.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/basics/lines

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="It is often useful to add annotations to a map plot. This is handled by pygmt.Figure.text.">

.. only:: html

 .. figure:: /tutorials/basics/images/thumb/sphx_glr_text_thumb.png
     :alt: Plotting text

     :ref:`sphx_glr_tutorials_basics_text.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/basics/text

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Many of the plotting functions take the region parameter, which sets the area that will be show...">

.. only:: html

 .. figure:: /tutorials/basics/images/thumb/sphx_glr_regions_thumb.png
     :alt: Setting the region

     :ref:`sphx_glr_tutorials_basics_regions.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/basics/regions
.. raw:: html

    <div class="sphx-glr-clear"></div>



.. _sphx_glr_tutorials_advanced:

Advanced
--------



.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="To plot an inset figure inside another larger figure, we can use the pygmt.Figure.inset method....">

.. only:: html

 .. figure:: /tutorials/advanced/images/thumb/sphx_glr_insets_thumb.png
     :alt: Adding an inset to the figure

     :ref:`sphx_glr_tutorials_advanced_insets.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/advanced/insets

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Default GMT parameters can be set globally or locally using pygmt.config.">

.. only:: html

 .. figure:: /tutorials/advanced/images/thumb/sphx_glr_configuration_thumb.png
     :alt: Configuring PyGMT defaults

     :ref:`sphx_glr_tutorials_advanced_configuration.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/advanced/configuration

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create 3-D perspective image or surface mesh from a grid using pygmt.Figure.grdview.">

.. only:: html

 .. figure:: /tutorials/advanced/images/thumb/sphx_glr_3d_perspective_image_thumb.png
     :alt: Creating a 3D perspective image

     :ref:`sphx_glr_tutorials_advanced_3d_perspective_image.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/advanced/3d_perspective_image

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Plotting a contour map is handled by pygmt.Figure.grdcontour.">

.. only:: html

 .. figure:: /tutorials/advanced/images/thumb/sphx_glr_contour_map_thumb.png
     :alt: Creating a map with contour lines

     :ref:`sphx_glr_tutorials_advanced_contour_map.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/advanced/contour_map

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="When you&#x27;re preparing a figure for a paper, there will often be times when you&#x27;ll need to put m...">

.. only:: html

 .. figure:: /tutorials/advanced/images/thumb/sphx_glr_subplots_thumb.png
     :alt: Making subplots

     :ref:`sphx_glr_tutorials_advanced_subplots.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/advanced/subplots

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Plotting a map of Earth relief can use the data accessed by the pygmt.datasets.load_earth_relie...">

.. only:: html

 .. figure:: /tutorials/advanced/images/thumb/sphx_glr_earth_relief_thumb.png
     :alt: Plotting Earth relief

     :ref:`sphx_glr_tutorials_advanced_earth_relief.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/advanced/earth_relief

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="PyGMT accepts a variety of datetime objects to plot data and create charts. Aside from the buil...">

.. only:: html

 .. figure:: /tutorials/advanced/images/thumb/sphx_glr_date_time_charts_thumb.png
     :alt: Plotting datetime charts

     :ref:`sphx_glr_tutorials_advanced_date_time_charts.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/advanced/date_time_charts

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Plotting vectors is handled by pygmt.Figure.plot.">

.. only:: html

 .. figure:: /tutorials/advanced/images/thumb/sphx_glr_vectors_thumb.png
     :alt: Plotting vectors

     :ref:`sphx_glr_tutorials_advanced_vectors.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/advanced/vectors
.. raw:: html

    <div class="sphx-glr-clear"></div>



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
